# variant_assessment

./: .gitignore  LICENSE  Neo4J_OpenAI_Demo.ipynb  Ollama_struct_out.py  README.md  combine_lei.py  combine_w_quotes.py  ground.csv  ground_2.csv  highlight.py  lei_metrics_output.csv  lei_prompt_COT.txt  lei_prompt_few_shot.txt  lei_prompt_one_shot.txt  llama_prompt_few_shot .txt  llama_prompt_one_shot.txt  main.py  metrics.py  metrics2.py  openai_struct_out.py  prompt.txt  prompt_with_quote llama.txt  prompt_with_quote.txt  prompt_with_quote_llama.txt  pyproject.toml  requirements.txt  run_combine_lei.py  run_highlight_lei.py  run_highlight_llama.py  run_lei.py  run_llama.py  run_llama_with_quotes  run_llama_with_quotes.py  run_two_pass.py  test.py  test_input.txt  test_prompt.txt  two_pass.py  use_llama_one.py
highlight_evidence/: evidence_highlighter.py
llama prompts/: llama_prompt_few_shot_COT.txt
llama prompts first pass/: llama_zero_shot.txt
llama prompts two pass/: zero_shot.txt
metrics/: lei_metrics_COT.csv  lei_metrics_few_shot_COT.csv  llama_metrics_output.csv
metrics_2pass/: gpt-3.5_metrics_constraint.csv  gpt-3.5_metrics_few_shot.csv  gpt-4_metrics_COT.csv  gpt-4_metrics_constraint.csv  gpt-4_metrics_few_shot.csv  gpt-4_metrics_few_shot_COT.csv  llama_metrics_COT.csv  llama_metrics_constraint.csv  llama_metrics_one_shot.csv  llama_metrics_zero_shot.csv
one_pass_output/: pass1_Burke.txt  pass1_Gatke.txt  pass1_Gatke2.txt  pass1_Gatke_2007.txt  pass1_Hubers.txt  pass1_Musante.txt  pass1_Primo.txt  pass1_Vantroys.txt  pass1_output.txt
output/: Gatke_2001_llama.json  Hubers_llama.json  PrimoParmo_llama.json
output_gpt-3.5-turbo_2pass_COT/: Burke.json  Gatke2001.json  Gatke2007.json  Hubers.json  Musante.json  PrimoParmo.json  (+8 more)
(+568 files in other folders)
