[project]
name = "variant-assessment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "biocommons-seqrepo>=0.6.9",
    "easyocr>=1.7.2",
    "hgvs>=1.5.4",
    "langchain>=0.3.27",
    "langchain-core>=0.3.78",
    "langchain-google-genai>=2.1.12",
    "langchain-ollama>=0.3.10",
    "langchain-openai>=0.3.35",
    "langchain-text-splitters>=0.3.11",
    "metapub>=0.6.4",
    "openai>=2.2.0",
    "pdf2image>=1.17.0",
    "requests>=2.32.5",
]
