[project]
name = "variant-assessment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "easyocr>=1.7.2",
    "langchain>=0.3.27",
    "langchain-core>=0.3.78",
    "langchain-ollama>=0.3.10",
    "langchain-openai>=0.3.35",
    "langchain-text-splitters>=0.3.11",
    "openai>=2.2.0",
    "pdf2image>=1.17.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "typer>=0.23.2",
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]


[tool.pixi.tasks]

[tool.pixi.dependencies]
poppler = ">=26.2.0,<27"

[tool.setuptools]
packages = ["paper_search", "pipeline", "evaluation", "plotting"]
